Restrict direct access to trace data arrays (#327)